<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="317dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/result"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_image" />

        <TextView
            android:id="@+id/result_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/result"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_image"
            app:layout_constraintVertical_bias="0.239" />

        <TextView
            android:id="@+id/result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/result"
            android:textSize="18sp"

            app:layout_constraintStart_toEndOf="@+id/result_text"
            app:layout_constraintTop_toBottomOf="@+id/result_image" />

        <TextView
            android:id="@+id/result_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/cancer_result_true"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_image"
            app:layout_constraintVertical_bias="0.607" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            app:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/simpan"
            app:strokeColor="@android:color/holo_green_dark"
            app:strokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_explanation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            app:backgroundTint="@android:color/transparent"
            android:text="@string/kembali"
            android:textColor="@color/black"
            app:strokeColor="@android:color/black"
            app:strokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_explanation"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>